# gzp

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: bench.rs
examples/: snap_decode.rs  test1.rs  test2.rs  test3.rs
proptest-regressions/: lib.txt
src/: bgzf.rs  check.rs  deflate.rs  lib.rs  main.rs  mgzip.rs  par_decompress.rs  par_gz.rs  pargz.rs  parsnap.rs  parz.rs  server.rs  snap.rs  syncz.rs  z.rs
src/mgzip/: mod.rs  par_decompress.rs
src/par/: compress.rs  decompress.rs  mod.rs
