[package]
name = "gzp"
authors = ["Seth Stadick <sstadick@gmail.com>"]
version = "0.11.3"
edition = "2018"
license = "Unlicense/MIT"
readme = "README.md"
documentation = "https://docs.rs/gzp"
homepage = "https://github.com/sstadick/gzp"
repository = "https://github.com/sstadick/gzp"
categories = ["compression", "concurrency"]
keywords = ["compression", "parallel", "pigz"]
description = "Parallel Compression"

[lib]
name = "gzp"
path = "src/lib.rs"
bench = false

[features]
# Feature Sets
default = ["deflate_default", "libdeflate"]
snappy_default = ["snappy", "snap", "deflate_rust"] # needs flate2 for compression type
deflate_default = ["deflate_zlib_ng"]
deflate_rust = ["deflate", "flate2/rust_backend"]
deflate_zlib = ["deflate", "flate2/zlib", "any_zlib", "libz-sys", "libz-sys/libc"]
deflate_zlib_ng = ["deflate", "flate2/zlib-ng-compat", "any_zlib", "libz-sys"]

# Feature flags used internally
deflate = []
libdeflate = ["libdeflater"]
snappy = []
any_zlib = ["flate2/any_zlib"]

[dependencies]
bytes = "1.3.0"
num_cpus = "1.15.0"
thiserror = "1.0.38"
flume = "0.10.14"
byteorder = "1.4.3"
flate2 = { version = "1.0.25", default-features = false, optional = true }
libdeflater = { version = "0.12.0", optional = true }
libz-sys = { version = "1.1.8", default-features = false, optional = true }
snap = { version = "1.1.0", optional = true }
core_affinity = "0.8.0"

[dev-dependencies]
proptest = "1.0.0"
tempfile = "3.3.0"
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false
